--- a/Tradução_de_PPTX_Imersão_IA_Alura_+_Google_Gemini.ipynb
+++ b/Tradução_de_PPTX_Imersão_IA_Alura_+_Google_Gemini.ipynb
@@ -796,6 +796,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Prontinho! Faça o download abaixo 👇"
+      ],
+      "metadata": {
+        "id": "GXpcwDmhtwzL"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Fazer o download do novo documento traduzido\n",
