Aviso de limite da API key gratuita

--- a/Tradução_de_PPTX_Imersão_IA_Alura_+_Google_Gemini.ipynb
+++ b/Tradução_de_PPTX_Imersão_IA_Alura_+_Google_Gemini.ipynb
@@ -66,7 +66,7 @@
         },
         "outputId": "64f8b1a8-5aee-48f0-a8bd-cbdaea366692"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "NfCqHo1tLk8P"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 198,
+      "execution_count": null,
       "metadata": {
         "id": "aePV2bdfDeoW"
       },
@@ -166,7 +166,7 @@
       "metadata": {
         "id": "_xP4lWhsS5ko"
       },
-      "execution_count": 199,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -256,7 +256,7 @@
       "metadata": {
         "id": "o8bqIfi_DyH8"
       },
-      "execution_count": 204,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -311,7 +311,7 @@
       "metadata": {
         "id": "uOqlg2TRLVh1"
       },
-      "execution_count": 201,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -432,7 +432,7 @@
       "metadata": {
         "id": "HXukBDmm1Obr"
       },
-      "execution_count": 205,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -465,7 +465,7 @@
         "id": "dBFPvLRmnO5d",
         "outputId": "90240892-80ee-4da6-c0df-e53150248da5"
       },
-      "execution_count": 211,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -674,7 +674,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Forneça o idioma desejado e aguarde os Agentes fazerem o trabalho 😁"
+        "### Forneça o idioma desejado e aguarde os Agentes fazerem o trabalho 😁\n",
+        "  \n",
+        "🚨Atenção! O programa não tem limite de slides, mas a **API key gratuita** não permite muitas requisições. Consegui no máximo 15 slides."
       ],
       "metadata": {
         "id": "me_q5HhJqCV0"
@@ -693,7 +695,7 @@
         "id": "X2jbR_sQoB1w",
         "outputId": "a40d141f-89f2-4236-881d-8480387a4e9b"
       },
-      "execution_count": 212,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -818,7 +820,7 @@
         "id": "OMtGfMOv1oxh",
         "outputId": "f7eaf213-cec1-49a2-f2b2-91c4b74de342"
       },
-      "execution_count": 213,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
